[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/SpaceNode.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[sub_resource type="CircleShape2D" id=2]

[node name="SpaceNode" type="Node2D" groups=[
"SpaceNodes",
]]
script = ExtResource( 1 )

[node name="NodeRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NodeRange"]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"SpaceNodeHitboxes",
]]
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="MouseDetectRange" type="Area2D" parent="."]
[connection signal="input_event" from="MouseDetectRange" to="." method="_on_MouseDetectRange_input_event"]
